//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique]
  emailVerified DateTime
  password String
  name String
  role Role [not null, default: 'USER']
  image String
  orders Order [not null]
  accounts Account [not null]
  sessions Session [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Product {
  id String [pk]
  prodcode String [not null]
  name String [not null]
  price Decimal [not null]
  isFeatured Boolean [not null, default: false]
  amount Decimal [not null, default: 1]
  for For [not null]
  typeId String [not null]
  type Type [not null]
  sizeId String [not null]
  size Size [not null]
  colorId String [not null]
  color Color [not null]
  colId String
  collect Collect
  orderItems OrderItem [not null]
  images Image [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Type {
  id String [pk]
  name String [not null]
  for For [not null]
  products Product [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Size {
  id String [pk]
  name String [not null]
  value String [not null]
  products Product [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Color {
  id String [pk]
  name String [not null]
  value String [not null]
  products Product [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Collect {
  id String [pk]
  name String [not null]
  image String [not null]
  products Product [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Order {
  id String [pk]
  userId String [not null]
  user User [not null]
  orderItems OrderItem [not null]
  phone String [not null, default: '']
  address String [not null, default: '']
  state State [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table OrderItem {
  id String [pk]
  orderId String [not null]
  order Order [not null]
  productId String [not null]
  product Product [not null]
  amount Decimal [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Image {
  id String [pk]
  url String [not null]
  productId String [not null]
  product Product [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum State {
  CANCLED
  PENDING
  SUCCESS
}

Enum Role {
  ADMIN
  USER
}

Enum For {
  MALE
  FEMALE
  KID
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Product.typeId > Type.id

Ref: Product.sizeId > Size.id

Ref: Product.colorId > Color.id

Ref: Product.colId > Collect.id

Ref: Order.userId > User.id

Ref: OrderItem.orderId > Order.id

Ref: OrderItem.productId > Product.id

Ref: Image.productId > Product.id [delete: Cascade]